--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="header">
     <div class ="container">
         <nav>
-            <img src="img/logo4.png" class="logo">
+            <img src="./img/logo4.png" class="logo">
            <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -104,7 +104,7 @@
         <h1 class="sub-title">My Work</h1>
          <div class="work-list">
             <div class="work">
-                <img src="img/TTT.jpg">
+                <img src="./img/TTT.jpg">
                 <div class="layer">
                     <h3>Tic Tac Toe</h3>
                     <p>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="img/word.jpg">
+                <img src="./img/word.jpg">
                 <div class="layer">
                     <h3>Word Puzzle</h3>
                     <p>
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="img/sky4.png">
+                <img src="./img/sky4.png">
                 <div class="layer">
                     <h3>Weather Api</h3>
                     <p>
@@ -151,7 +151,7 @@
                     <a href="https://www.instagram.com/__.vidzz._?igsh=ZGMzOXp1dTNyeXdn"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/vidya-nagare-614157264?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="img/Vidya Resume.pdf" download class="btn btn2">Download CV</a>
+                <a href="./img/Vidya Resume.pdf" download class="btn btn2">Download CV</a>
 
             </div>
             <div class="contact-right">
